--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
-asgiref==3.11.1
-Django==5.2.11
-django-cors-headers==4.9.0
-djangorestframework==3.16.1
-mysqlclient==2.2.8
-python-decouple==3.8
-sqlparse==0.5.5
-tzdata==2025.3
+asgiref==3.8.1
+distlib==0.3.6
+filelock==3.12.0
+gunicorn==25.1.0
+packaging==26.0
+platformdirs==3.5.1
+sqlparse==0.4.4
+tzdata==2023.3
+uv==0.2.15
+virtualenv==20.23.0
+virtualenvwrapper-win==1.2.7
