--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.2.11
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 gunicorn==25.1.0
+mysqlclient==2.2.8
 packaging==26.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
